<resources>
    <string name="app_name">마스크 맵</string>
    <string name="title_activity_maps">Map</string>
    <string name="signin_desc">심평원, 공공데이터 포털에서 제공하는 공적 마스크 재고 현황을 제공합니다.</string>

    <string name="plenty">100+</string>
    <string name="some">30~99</string>
    <string name="few">2~29</string>
    <string name="empty">0</string>

    <string name="desc_name">판매처 이름</string>
    <string name="desc_type">판매처 유형</string>
    <string name="desc_addr">주소</string>
    <string name="desc_stock_at">입고 시간</string>
    <string name="desc_stock_at_to">남은 시간</string>
    <string name="desc_stock">재고</string>
    <string name="desc_phone">전화번호</string>
    <string name="desc_created_at">업데이트 된 시간</string>
    <string name="desc_sub_stock_in">재고 알림</string>
    <string name="desc_dist">거리</string>

    <string name="stock_at_passed">입고 완료</string>

    <string name="type_nh">농협</string>
    <string name="type_post">우체국</string>
    <string name="type_drugstore">약국</string>

    <string name="stock_plenty">100개 이상</string>
    <string name="stock_some">100개 미만</string>
    <string name="stock_few">30개 미만</string>
    <string name="stock_empty">매진</string>

    <string name="permission_title">위치 정보 접근 허용</string>
    <string name="permission_description">주변 마스크 판매점을 조회할 수 있습니다.</string>
    <string name="permission_request_button_text">권한 허용하기</string>

    <string name="permission_name_location">위치정보</string>
    <string name="permission_description_location">현재 위치를 기반으로 판매처를 검색합니다</string>

    <string name="list_button_text_zero">현재 위치에서 리스트로 보기(0)</string>
    <string name="list_button_text">현재 위치에서 리스트로 보기(%d)</string>

    <string name="distance_description_under_100m">100m 이내</string>
    <string name="distance_format_kilo_meter">%skm</string>

    <string name="purchase_today">오늘 구매대상: [%s]</string>
    <string name="purchase_tomorrow">내일 구매대상: [%s]</string>

    <string name="day_partition_1">1년생, 6년생</string>
    <string name="day_partition_2">2년생, 7년생</string>
    <string name="day_partition_3">3년생, 8년생</string>
    <string name="day_partition_4">4년생, 9년생</string>
    <string name="day_partition_5">5년생, 0년생</string>
    <string name="day_partition_6">주중에 못 산 사람</string>

    <string name="opened">영업중</string>
    <string name="closed">영업중이 아님</string>
    <string name="unknown">알 수 없음</string>

    <string name="app_download_complete">업데이트 다운로드가 완료되었습니다</string>
    <string name="restart">재시작하기</string>

    <string name="near_by_store">주변 판매점</string>
    <string name="online_store">온라인 판매점</string>
    <string name="online_store_desc">온라인 쇼핑몰에서 마스크 판매 알림을 설정할 수 있습니다.</string>
    <string name="day_of_week_1">월</string>
    <string name="day_of_week_2">화</string>
    <string name="day_of_week_3">수</string>
    <string name="day_of_week_4">목</string>
    <string name="day_of_week_5">금</string>
    <string name="day_of_week_6">토</string>
    <string name="day_of_week_7">일</string>

    <string name="stock_at">입고</string>
    <string name="empty_at">매진</string>
    <string name="store_history">지난 입고 내역</string>

    <string name="subscription_new_online_store">새로운 온라인 판매점 알림</string>
    <string name="subscription_before_5_minutes">판매 5분전 알림</string>

    <string name="on_sale">판매중</string>
    <string name="preparing_sale">준비중</string>
    <string name="sold_out">판매종료</string>
    <string name="hide">숨기기</string>
    <string name="sign_in_title">구글 로그인 필요</string>
    <string name="sign_in_description"> 이 기능은 Google 로그인이 필요합니다.\n 로그인 후 유용한 기능을 사용해보세요.</string>

</resources>
