<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:paddingTop="@dimen/block_half"
    android:paddingBottom="@dimen/block_half">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/block1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Chronometer
            android:id="@+id/stock_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/desc_stock_at"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide5"
            app:layout_constraintStart_toEndOf="@+id/guide4"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_nh"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintDimensionRatio="W, 1:1"
            app:layout_constraintEnd_toStartOf="@+id/name"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/guide1"
            app:layout_constraintTop_toTopOf="@+id/name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/desc_name"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide2"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/icon"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:padding="@dimen/block_half"
            android:text="@string/desc_stock"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide3"
            app:layout_constraintStart_toEndOf="@+id/guide2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/desc_dist"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide4"
            app:layout_constraintStart_toEndOf="@+id/guide3"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>