<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/block_half"
        android:background="@drawable/corner_background_filter_fragment"
        android:elevation="@dimen/block_half"
        android:orientation="vertical"
        android:paddingStart="@dimen/block1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/color_plenty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_background_plenty"
                android:padding="@dimen/block_half"
                android:text="@string/plenty"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_plenty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginBottom="-4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/color_some"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_background_some"
                android:padding="@dimen/block_half"
                android:text="@string/some"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_some"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginBottom="-4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/color_few"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_background_few"
                android:padding="@dimen/block_half"
                android:text="@string/few"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_few"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginBottom="-4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/color_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_background_empty"
                android:padding="@dimen/block_half"
                android:text="@string/empty"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginBottom="-4dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>